--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
     "file-loader": "^6.2.0",
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
-    "node-sass": "^9.0.0",
-    "sass-loader": "^14.0.0",
     "style-loader": "^3.3.4",
     "ts-loader": "^9.5.1",
     "typescript": "^4.1.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.94.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "yarn": "^1.22.22"
+
   },
   "dependencies": {
     "buffer": "^6.0.3",
