--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
     "url-loader": "^4.1.1",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
-    "yarn": "^1.22.22"
-
+    "yarn": "^1.22.22",
+    "graphql": "^16.11.0",
+    "graphql-tag": "^2.12.6"
   },
   "dependencies": {
     "buffer": "^6.0.3",
